--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="outer">
         <h1 style="align-items: center;">Real Time Weather Report</h1>
     <div id="input1">
-        <input id="input-city" type="text" placeholder="enter city-name">
+        <input id="input-city" type="text" placeholder="enter city name">
         <button id="search-button">search</button>     
     </div>
     <div>
